--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -5,7 +5,7 @@
 	<body>
 		<h1>Your To-Do list</h1>
 		<form method="POST">
-			<input id="id_new_item" placeholder="Enter a to-do item"  />
+			<input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
 			{% csrf_token %}
 		</form>
 
@@ -13,6 +13,6 @@
 			<tr>
 				<td>{{ new_item_text }}</td>
 			</tr>
-		</table>	
+		</table>
 	</body>
 </html>
